flapivor/tests/tests-m3/hopix/typechecker/good/litpatterns2.hopix
val x : int = "Darth" ? { "Yoda" => 0 | "Luke" => 1 | (_ : string) => 2 }