flapivor/tests/tests-m3/hopix/typechecker/bad/andpatterns.hopix
type t = A | B (int)

val test1 = A ? { A & B (x : bool) => 0 | B (_ : int) => 1 }